# GarminFitUtilities

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-deb.sh  garmin-disconnect.desktop  quick-deb.sh  update-version.sh
data/: osmconf.ini
data/map-style/: osm-spatialite.xml
extras/: profile.json  profile.tsv
src/: CMakeLists.txt  garmin-change-product.cpp  garmin-edit-completion.sh  garmin-edit.cpp  garmin-points-visited.cpp  garmin-profile-tsv2json.cpp  garmin-rename-files.cpp
src/command-args/: CMakeLists.txt  command-args.cpp  command-args.hpp
src/containers/: bimap.hpp  table.hpp
src/coordinates/: CMakeLists.txt  bounding-box.cpp  bounding-box.hpp  convert.cpp  convert.hpp  formulae.cpp  formulae.hpp
src/directory-scanner/: CMakeLists.txt  directory-scanner.cpp  directory-scanner.hpp
src/editor/: ActivitiesCommand.cpp  ActivitiesCommand.hpp  CMakeLists.txt  CommandMap.hpp  GpxCommand.cpp  GpxCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  IEditCommand.hpp  MessageCommand.cpp  MessageCommand.hpp  ProductCommand.cpp  ProductCommand.hpp  RawCommand.cpp  RawCommand.hpp  TimeStampCommand.cpp  TimeStampCommand.hpp
src/exceptions/: exceptions.hpp
src/gui/: CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  main.cpp  version.hpp
src/gui/dialogs/: ActivityDetailDialog.cpp  ActivityDetailDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/gui/icon/: garmin-disconnect-icon.h
src/gui/interfaces/: IActivityPanel.hpp  IFileOperations.cpp  IFileOperations.hpp
src/gui/models/: ActivityData.hpp  ActivityDataModel.cpp  ActivityDataModel.hpp  CoordinateModel.cpp  CoordinateModel.hpp  FileSystemModel.cpp  FileSystemModel.hpp
src/gui/panels/: ActivitiesPanel.cpp  ActivitiesPanel.hpp  ActivityDetailsPanel.cpp  ActivityDetailsPanel.hpp  FileTreePanel.cpp  FileTreePanel.hpp  GpxEditorPanel.cpp  GpxEditorPanel.hpp  MapPanel.cpp  MapPanel.hpp  MapRenderer.cpp  MapRenderer.hpp  PointsPanel.cpp  PointsPanel.hpp  ProductEditorPanel.cpp  ProductEditorPanel.hpp  RawEditorPanel.cpp  RawEditorPanel.hpp  RenamePanel.cpp  RenamePanel.hpp  TimestampEditorPanel.cpp  TimestampEditorPanel.hpp
src/gui/utils/: DataDirectoryResolver.cpp  DataDirectoryResolver.hpp  GuiUtils.cpp  GuiUtils.hpp  MetadataCache.cpp  MetadataCache.hpp  SettingsManager.cpp  SettingsManager.hpp
src/metadata/: CMakeLists.txt  sports.cpp  sports.hpp
src/parsers/: CMakeLists.txt  activities.cpp  activities.hpp  binary-mapper.cpp  binary-mapper.hpp  binary-scanner.cpp  binary-scanner.hpp  coordinate-replacement-scanner.cpp  coordinate-replacement-scanner.hpp  coordinates-parser.cpp  coordinates-parser.hpp  coordinates-scanner.cpp  coordinates-scanner.hpp  gpx-trkpt.cpp  gpx-trkpt.hpp  print-scanner.cpp  print-scanner.hpp  product-scanner.cpp  product-scanner.hpp  session-scanner.cpp  session-scanner.hpp  timestamp-scanner.cpp  timestamp-scanner.hpp
src/points-visited/: CMakeLists.txt  single-point.cpp  single-point.hpp  single-summary.cpp  single-summary.hpp
src/rename-files/: CMakeLists.txt  rename-files.cpp  rename-files.hpp
